--- a/TREC/src/main/resources/templates/removeddish.html
+++ b/TREC/src/main/resources/templates/removeddish.html
@@ -1,9 +1,27 @@
+<!DOCTYPE html>
+<meta charset="UTF-8"/>
 {{>header}}
 		
-<div>
-  <h2>Dish "{{dish.name}}" removed</h2>
-</div>		
+<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_5.jpg');" data-stellar-background-ratio="0.5">
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row no-gutters slider-text align-items-end justify-content-center">
+				<div class="col-md-9 ftco-animate text-center mb-5">
+					<h1 class="mb-2 bread">Borrar plato "{{dish.name}}"</h1>
+				</div>
+			</div>
+		</div>
+</section>
 
-<button onclick="location.href='/'">All Dishes</button>
-
+<section style="background-image: url('https://cdn.hipwallpaper.com/i/54/42/AL9wmh.jpg');">
+<br>
+	<div class="container">
+		<div>
+		  <h2 class="page-header">Plato "{{dish.name}}" borrado correctamente.</h2>
+		</div>		
+	
+		<button class="btn btn-primary" onclick="location.href='/menu'">Volver a "Carta"</button>
+	</div>
+<br>		
+</section>
 {{>footer}}
