--- a/TREC/src/main/resources/templates/dish.html
+++ b/TREC/src/main/resources/templates/dish.html
@@ -14,29 +14,38 @@
 		</div>
 	</section>
 
-<div>
-  {{#dish.image}}
-  	<img src="/dishes-{{dish.id}}/image">
-  {{/dish.image}}
-
-  {{^dish.image}}
-  	<img src="/images/no_image.png">
-  {{/dish.image}}
-  <div>
-    <p>{{dish.ingredient}}</p>
-  </div>
-  <p>
-    {{#logged}}
-
-	    {{#admin}}
-	    	<button onclick="location.href='/removedish-{{dish.id}}'">Remove</button>
-	    {{/admin}}
-
-    	<button onclick="location.href='/editdish-{{dish.id}}'">Edit</button>
-    {{/logged}}
-    <br>
-    <button onclick="location.href='/'">Back to all books</button>
-  </p>
-</div>
-
+<section style="background-image: url('https://cdn.hipwallpaper.com/i/54/42/AL9wmh.jpg');">
+<br>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4">
+			  {{#dish.image}}
+			  	<img src="/dishes-{{dish.id}}/image">
+			  {{/dish.image}}
+			
+			  {{^dish.image}}
+			  	<img src="/images/no_image.png">
+			  {{/dish.image}}
+			  <div>
+			    <p>{{dish.ingredient}}</p>
+			  </div>
+			</div>
+			<div class="col-md-4">
+			  <p>
+			    {{#logged}}
+			
+				    {{#admin}}
+				    	<button class="btn btn-primary" onclick="location.href='/removedish-{{dish.id}}'">Borrar</button>
+				    {{/admin}}
+			
+			    	<button class="btn btn-primary" onclick="location.href='/editdish-{{dish.id}}'">Editar</button>
+			    {{/logged}}
+			    <br>
+			    <br>
+			    <button class="btn btn-primary" onclick="location.href='/menu'">Volver a "Carta"</button>
+			  </p>
+			</div>
+		</div>
+	</div>
+</section>
 {{>footer}}
