--- a/TREC/src/main/resources/templates/register.html
+++ b/TREC/src/main/resources/templates/register.html
@@ -84,6 +84,9 @@
 								<input type="hidden" name="_csrf" value="{{token}}"/>
 								</div>
 							</div>
+							{{#loginerror}}
+							<p style="color:white;">Credenciales inválidas. Introduce datos válidos.</p>
+							{{/loginerror}}
 						</form>
 					</div>
 				</div>
