--- a/TREC/src/main/resources/templates/dish.html
+++ b/TREC/src/main/resources/templates/dish.html
@@ -3,7 +3,7 @@
 
 {{>header}}
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_5.jpg');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('/images/bg_5.jpg');" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row no-gutters slider-text align-items-end justify-content-center">
@@ -20,7 +20,7 @@
 		<div class="row">
 			<div class="col-md-4">
 			  {{#dish.image}}
-			  	<img src="/dishes-{{dish.id}}/image">
+			  	<img src="/dishes/{{dish.id}}/image">
 			  {{/dish.image}}
 			
 			  {{^dish.image}}
