--- a/TREC/src/main/resources/templates/menu.html
+++ b/TREC/src/main/resources/templates/menu.html
@@ -50,6 +50,11 @@
 									</div>
 								</div>
 								<p><a href="dishes/{{id}}">{{ingredient}}</a></p>
+								{{#logged}}
+									{{^admin}}
+										<p><a href="/team" class="btn btn-primary">Pedir</a></p>
+									{{/admin}}
+								{{/logged}}
 							</div>
 						</div>
   
