Admin can add dishes with ingredients
-Conexion from table dish to table ingredient
- Change of attributes of dishes

--- a/TREC/src/main/resources/templates/dish.html
+++ b/TREC/src/main/resources/templates/dish.html
@@ -27,7 +27,9 @@
 			  	<img src="/images/no_image.png">
 			  {{/dish.image}}
 			  <div>
-			    <p>{{dish.ingredient}}</p>
+			  {{#dish.ingredients}}
+			  	<p>{{name}}</p>
+			  {{/dish.ingredients}}
 			  </div>
 			</div>
 			<div class="col-md-4">
