--- a/TREC/src/main/resources/templates/add_food.html
+++ b/TREC/src/main/resources/templates/add_food.html
@@ -51,17 +51,13 @@
 							</div>
 						</div>
 						
-						<select name="lista" id="ingredients" multiple>
-						{{#ingredients}}
-  						<option value={{.}}>{{name}}</option>
-  						{{/ingredients}}
-						</select>
-						
 						<div class="form-group">
 							<label class="col-md control-label">Ingredientes:</label>
-							<div class="col-md-8">
-								<textarea class="form-control" value="" type="textarea" name='ingredient' rows=5 cols=40></textarea>
-							</div>
+							<select name="lista" id="ingredients" multiple>
+							{{#ingredients}}
+  							<option value={{id}}>{{name}}</option>
+  							{{/ingredients}}
+							</select>
 						</div>
 						<div class="form-group">
 							<label class="col-md control-label">Imagen del plato:</label>
