In menu dishes are separated in three colums by category
-First try with showing the dishes in newPurchase in the cart.
-First conditionated select to the database.

--- a/TREC/src/main/resources/templates/editdish.html
+++ b/TREC/src/main/resources/templates/editdish.html
@@ -48,7 +48,7 @@
 		  <br>
 		  <br>
 		  <p>
-		    <button class="btn btn-primary" onclick="location.href='/dishes-{{dish.id}}'; return false;">Cancelar</button>
+		    <button class="btn btn-primary" onclick="location.href='/dishes/{{dish.id}}'; return false;">Cancelar</button>
 		    <input class="btn btn-primary" type="submit" value="Guardar cambios" />
 		  </p>
 		</form>
