--- a/TREC/src/main/resources/templates/header.html
+++ b/TREC/src/main/resources/templates/header.html
@@ -38,7 +38,10 @@
 				{{/logged}}
 				{{#logged}}
 				<div class="col-8 col-md-2 d-flex justify-content-md-end btn-group">
-					<a href="/logout" class="btn btn-primary btn-sm">Cerrar sesión</a>
+					<form action="/logout" method="post">
+						<input class="btn btn-primary btn-sm" type="submit" value="Sign Out"/>
+						<input type="hidden" name="_csrf" value="{{token}}"/>
+					</form>
 				</div>
 				<div class="col-4 col-md-1 d-flex justify-content-md-end btn-group">
 					<a href="/cart" class="btn btn-primary btn-sm"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
