--- a/TREC/src/main/resources/templates/dish.html
+++ b/TREC/src/main/resources/templates/dish.html
@@ -38,8 +38,8 @@
 			
 				    {{#admin}}
 				    
-				    <button class="btn btn-primary" onclick="location.href='/removedish-{{dish.id}}'">Borrar</button>
-			    	<button class="btn btn-primary" onclick="location.href='/editdish-{{dish.id}}'">Editar</button>
+				    <button class="btn btn-primary" onclick="location.href='/removedish/{{dish.id}}'">Borrar</button>
+			    	<button class="btn btn-primary" onclick="location.href='/editdish/{{dish.id}}'">Editar</button>
 			    	
 			    	{{/admin}}
 			    	
