--- a/TREC/src/main/resources/templates/cart.html
+++ b/TREC/src/main/resources/templates/cart.html
@@ -31,7 +31,7 @@
                                         <h4><span class="glyphicon glyphicon-shopping-cart"></span> Carro de la compra</h4>
                                     </div>
                                     <div class="col-xs-6 col-md-3">
-                                        <a href="carta">
+                                        <a href="/menu">
                                             <span class="glyphicon glyphicon-share-alt"></span> Continuar comprando
                                         </button></a>
                                     </div>
@@ -58,10 +58,7 @@
                                 </div>
                                 <div class="col-xs-6 col-md-5">
                                     <div class="col-xs-6 text-right">
-                                        <h4><strong>{{dishPrice}}€<span class="text-muted">x</span></strong></h4>
-                                    </div>
-                                    <div class="col-xs-4">
-                                        <input type="text" class="form-control input-sm" value="1">
+                                        <h4><strong>{{dishPrice}}€<span class="text-muted"></span></strong></h4>
                                     </div>
                                     <div class="col-xs-2">
                                         <button type="button" class="btn btn-link btn-lg">
