--- a/TREC/src/main/resources/templates/register.html
+++ b/TREC/src/main/resources/templates/register.html
@@ -35,12 +35,12 @@
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-										<input type="text" name="name" class="form-control" placeholder="Alias">
+										<input type="text" name="name" class="form-control" placeholder="Nombre de usuario">
 									</div>
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-										<input type="email" name="email" class="form-control" placeholder="Correo electróico">
+										<input type="email" name="email" class="form-control" placeholder="Correo electrónico">
 									</div>
 								</div>
 								<div class="col-md-12">
