--- a/TREC/src/main/resources/templates/404.html
+++ b/TREC/src/main/resources/templates/404.html
@@ -4,7 +4,7 @@
 {{>header}}
 <!-- END nav -->
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_5.jpg');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('/images/bg_5.jpg');" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
     <div class="row no-gutters slider-text align-items-end justify-content-center">
@@ -19,7 +19,7 @@
   <div class="container">
       <div class="row">
           <div class="col-lg-5">
-              <img src="images/error.png">
+              <img src="/images/error.png">
           </div>
           <div class="col-lg-7">
               <center><h2>Parece que algo no va bien, ha ocurrido un error</h2>
