--- a/TREC/src/main/resources/templates/header.html
+++ b/TREC/src/main/resources/templates/header.html
@@ -39,7 +39,7 @@
 				{{#logged}}
 				<div class="col-8 col-md-2 d-flex justify-content-md-end btn-group">
 					<form action="/logout" method="post">
-						<input class="btn btn-primary btn-sm" type="submit" value="Sign Out"/>
+						<input class="btn btn-primary btn-sm" type="submit" value="Cerrar sesión"/>
 						<input type="hidden" name="_csrf" value="{{token}}"/>
 					</form>
 				</div>
