Photos added to the dishes in DatabaseInitializer.
- Added the photos of the example dishes.

- All photos will appear with the same length and width now.

- Also small fixes.

--- a/TREC/src/main/resources/templates/cart.html
+++ b/TREC/src/main/resources/templates/cart.html
@@ -47,10 +47,10 @@
                             <div class="row">
                             
 									{{#image}}
- 										<img src="/dishes/{{id}}/image">
+ 										<img src="/dishes/{{id}}/image" width=“200” height=“150”>
  									{{/image}}			    
 					    			{{^image}}
-										<img src="/images/drink-6.jpg">
+										<img src="/images/drink-6.jpg" width=“200” height=“150”>
 									{{/image}}
 									
                                 <div class="col-xs-4 col-md-4">
