--- a/TREC/src/main/resources/templates/menu.html
+++ b/TREC/src/main/resources/templates/menu.html
@@ -4,7 +4,7 @@
 {{>header}}
 	<!-- END nav -->
 	
-	<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_5.jpg');" data-stellar-background-ratio="0.5">
+	<section class="hero-wrap hero-wrap-2" style="background-image: url('/images/bg_5.jpg');" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row no-gutters slider-text align-items-end justify-content-center">
@@ -39,7 +39,7 @@
  							<div class="menu-img img" style="background-image: url(/dishes/{{id}}/image);"></div>
  							{{/image}}			    
 					    	{{^image}}
-							<div class="menu-img img" style="background-image: url(images/drink-6.jpg);"></div>
+							<div class="menu-img img" style="background-image: url(/images/drink-6.jpg);"></div>
 							{{/image}}
 							
 							<div class="text">
