--- a/TREC/src/main/resources/templates/add_food.html
+++ b/TREC/src/main/resources/templates/add_food.html
@@ -64,7 +64,7 @@
 							<div class="form-group">
 								<label class="col-md control-label">Imagen del plato:</label>
 								<div class="col-md-8">
-									<input type='file' name='imageField' accept=".jpg, .jpeg" class="text-center center-block well well-sm"/>
+									<input type='file' name='imageField' accept=".jpg, .jpeg, .png" class="text-center center-block well well-sm"/>
 								</div>
 							</div>
 						  	<div class="form-group">
