Print purchase PDF
- Print purchase PDF

--- a/TREC/src/main/resources/templates/footer.html
+++ b/TREC/src/main/resources/templates/footer.html
@@ -1,5 +1,5 @@
 <meta charset="UTF-8"/>
-<footer class="ftco-footer ftco-no-pb ftco-section" style="background-image: url('images/bg_8.jpg');">
+<footer class="ftco-footer ftco-no-pb ftco-section" style="background-image: url('/images/bg_8.jpg');">
 		<div class="container">
 			<div class="row mb-5">
 				<div class="col-md-6 col-lg-6">
@@ -58,4 +58,8 @@
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 	<script src="/js/google-map.js"></script>
 	<script src="/js/main.js"></script>
+	<script src="/js/html2canvas.min.js"></script>
+	<script src="/js/purify.min.js"></script>
+	<script src="/js/jspdf.umd.min.js"></script>
+	<script src="/js/topdf.js"></script>
 </html>
