--- a/TREC/src/main/resources/templates/header.html
+++ b/TREC/src/main/resources/templates/header.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<title>Tu Restaurante en Casa</title>
-    <link rel="icon" type="image/png" sizes="256x256" href="images/logo.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="/images/logo.png">
     <meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
@@ -23,6 +23,7 @@
 	<link rel="stylesheet" href="/css/flaticon.css">
 	<link rel="stylesheet" href="/css/style.css">
 	<link rel="stylesheet" href="/css/sperfil.css">
+  
 
 </head>
 <body>
